# ecodata_ontology

./: .gitignore  README.md  classes_diagram.drawio  pyproject.toml  requirements.txt
genecodata/: __main__.py  main.py
genecodata.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
genecodata/data_converter/: data_converter.py  from_askofile_to_generalist_rdf_schema.py  generate_askofiles.py
genecodata/data_parser/: tabular_data_parsers.py
genecodata/genecodata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
genecodata/rdf_handlers/: rdf_writer.py  triples_classes.py
schemas/drawio/: sosa_iop_asv.drawio  sosa_iop_bioagressor.drawio  sosa_iop_plant_pheno.drawio  sosa_iop_weeds.drawio
schemas/figures/: bidouille_weeds.graphml  bilan.graphml  bilan2.graphml  deepimpact_besoins.graphml  deepimpact_besoins_sosa_match.graphml  double_pb.graphml  foi_spatiales.graphml  foi_spatiales_rappel.graphml  graphe_organismes.graphml  multigraph_foi_spatiales.graphml  pb_asv.graphml  pb_bioagressors.graphml  pb_plantpheno.graphml  pb_weeds.graphml  protocole.graphml  racine_pb.graphml  solution_asv.graphml  solution_asv_bof.graphml  uof_et_sample.graphml
schemas/graphml/: FoI_ou_pas.graphml  deepimpact_besoins_sosa_match_issues.graphml  issues_github.graphml
scripts/: bn_biomass_y1.xlsx  config.json  dp_data_askomics_formatting.py  metadata_test.xlsx
scripts/v1/: dp_data_to_ttl.py  test.py
scripts/v2/: build_rdf_functions.py  dp_data_to_ttl_utils.py  dp_locations_to_ttl.py  dp_obsspecies_to_ttl.py
src/data_converter/: data_converter.py
src/data_parser/: tabular_data_parsers.py
src/rdf_handlers/: rdf_writer.py  tmp.py  triples_classes.py
src/test_usecase/: config.csv  triples_from_config.py
src/tests/: test_link_by_instances.ttl
test/test_data_converter/: test_configturtleconverter.py
test/test_rdf_handlers/: test_rdf_writer.py  test_triples_classes.py
test/test_usecase/: config.tsv  config.ttl  (+4 more)
tests/: test_link_by_instances.ttl
usecase/: abstraction_schema_v2_(genecodata).graphml  brouillon_raw_asko_general.graphml  brouillon_raw_asko_rdf.ods  match_deepimpact_alturis.ods  test_link_by_classes.ttl
(+145 files in other folders)
