[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genecodata"
dynamic = ["version"]
authors = [
  {name = "amataign", email = "alice.mataigne@irisa.fr"}, 
  {name = "mlahaye", email = "marie.lahaye@inrae.fr"}]
readme = "README.md"
description = "GenEcoData: a generalist schema to integrate environmental and genomic data with holobionts"
license = {text = "GPL-3.0-or-later"}

dependencies = [
  'pandas', 
  'logger']

[project.scripts]
genecodata = "genecodata.__main__:main"

[project.optional-dependencies]
test = [
  'pytest',
  'pytest-mock'
]

[tool.setuptools]
packages = ['genecodata']
package-dir = {'genecodata' = 'genecodata'}

[tool.setuptools.dynamic]
version = { attr = "genecodata.__version__" }
dependencies = {file = ["requirements.txt"]}